# quant

./: .bazelignore  .bazelrc  .gitignore  000300.SH?start_date=2026-05-01  CLAUDE.md  CMakeLists.txt  README.md  WORKSPACE.bazel  wget-log
.claude/: settings.local.json
cpp/: BUILD
data/: 000001.SH_7_1747753200000000.seg  000001.SZ_7_1776697200000000.seg  000002.SZ_7_1776697200000000.seg  000009.SZ_7_1776697200000000.seg  000021.SZ_7_1776697200000000.seg  000027.SZ_7_1776697200000000.seg  000039.SZ_7_1776697200000000.seg  000050.SZ_7_1776697200000000.seg  000060.SZ_7_1776697200000000.seg  000063.SZ_7_1776697200000000.seg  000088.SZ_7_1776697200000000.seg  000100.SZ_7_1776697200000000.seg  000155.SZ_7_1776697200000000.seg  000157.SZ_7_1776697200000000.seg  000166.SZ_7_1776697200000000.seg  000300.SH_7_1747753200000000.seg  000301.SZ_7_1776697200000000.seg  000333.SZ_7_1776697200000000.seg  000338.SZ_7_1776697200000000.seg  000400.SZ_7_1776697200000000.seg  000408.SZ_7_1776697200000000.seg  000423.SZ_7_1776697200000000.seg  000425.SZ_7_1776697200000000.seg  000513.SZ_7_1776697200000000.seg  000519.SZ_7_1776697200000000.seg  000537.SZ_7_1776697200000000.seg  000538.SZ_7_1776697200000000.seg  000559.SZ_7_1776697200000000.seg  000563.SZ_7_1776697200000000.seg  000568.SZ_7_1776697200000000.seg  000582.SZ_7_1776697200000000.seg  000591.SZ_7_1776697200000000.seg  000596.SZ_7_1776697200000000.seg  000598.SZ_7_1776697200000000.seg  000617.SZ_7_1776697200000000.seg  000623.SZ_7_1776697200000000.seg  000625.SZ_7_1776697200000000.seg  000629.SZ_7_1776697200000000.seg  000630.SZ_7_1776697200000000.seg  000651.SZ_7_1776697200000000.seg  (+2140 more)
deploy/: README.md  docker-compose.yml
docs/: README.md  architecture_cpp_core.md  architecture_cpp_infra.md  frontend_plan.md  (+27 more)
py/: .pre-commit-config.yaml  README.md  pyproject.toml
py/bridge/: market_data_bridge.py
py/client/: etcd_submit.py
py/compiler/: ir_compiler.py
py/data/: batch_download_daily.py  download_corporate_actions.py
py/data/csv_daily/: 000001.csv  000002.csv  000009.csv  000021.csv  000039.csv  000050.csv  000063.csv  000088.csv  000166.csv  000301.csv  000333.csv  000408.csv  000423.csv  000513.csv  000559.csv  000563.csv  000623.csv  000625.csv  000661.csv  000683.csv  000703.csv  000725.csv  000728.csv  000738.csv  000739.csv  000768.csv  000785.csv  000792.csv  000807.csv  000825.csv  000830.csv  000858.csv  000876.csv  000895.csv  000898.csv  000937.csv  000963.csv  000975.csv  000997.csv  001213.csv  (+315 more)
py/data/daily/: 000001_SH.parquet  000300_SH.parquet  300750_SZ.parquet  399001_SZ.parquet  399006_SZ.parquet  600519_SH.parquet  progress.json
py/dsl/: strategy_base.py
py/scripts/: fetch_data.py  run_backtest.py  train_model.py
py/src/quant_invest/: __init__.py
py/src/quant_invest/api/: __init__.py  app.py  auth.py  dependencies.py  event_bus.py  schemas.py  strategy_api.py  ws.py  ws_server.py
py/src/quant_invest/api/routes/: __init__.py  backtest.py  data.py  factor.py  news.py  portfolio.py  risk.py  strategy.py  system.py
py/src/quant_invest/backtest/: __init__.py  broker.py  commission.py  data_handler.py  engine.py  events.py  performance.py  portfolio.py  restrictions.py  slippage.py  task_manager.py
py/src/quant_invest/bot/: __init__.py  app.py  pusher.py  templates.py
py/src/quant_invest/bot/commands/: __init__.py  base.py  help_command.py  performance.py  portfolio.py  strategy_ctrl.py
py/src/quant_invest/c_bindings/: __init__.py
py/src/quant_invest/config/: __init__.py  logging_conf.py  settings.py
py/src/quant_invest/core/: __init__.py  settings.py
py/src/quant_invest/data/: __init__.py  cache.py  parquet_to_csv.py  scheduler.py
py/src/quant_invest/data/collectors/: __init__.py  daily_bar.py  financial.py  index_constituent.py  industry_classification.py  minute_bar.py  tick_data.py
py/src/quant_invest/data/macro/: __init__.py  base.py  calendar.py  indicators.py
py/src/quant_invest/data/news/: __init__.py  base.py  event_detector.py  keyword_sentiment.py  sentiment.py  symbol_extractor.py
py/src/quant_invest/data/providers/: __init__.py  akshare_macro_provider.py  akshare_provider.py  base.py  cls_news_provider.py  tushare_provider.py  wind_provider.py  yahoo_provider.py
py/src/quant_invest/data/quality/: __init__.py  anomaly_detector.py  repair.py  validator.py
py/src/quant_invest/execution/: __init__.py  order_adapter.py
py/src/quant_invest/ml/: __init__.py  evaluation.py  pipeline.py  versioning.py
py/src/quant_invest/ml/feature/: __init__.py  builder.py  real_builder.py  transformer.py
py/src/quant_invest/ml/models/: __init__.py  base.py  tree_models.py
py/src/quant_invest/pipeline/: __init__.py  kline_pipeline.py
py/src/quant_invest/risk/: __init__.py  risk_adapter.py
py/src/quant_invest/storage/: __init__.py  adapter.py
py/src/quant_invest/strategy/: __init__.py  base.py  compiler.py  context.py  dsl.py  dsl2.py  factor_api.py  factor_engine.py  hot_reload.py  ir_compiler.py  ma_cross.py  optimizer.py  position_sizer.py  registry.py  signal.py  watcher.py
py/src/quant_invest/strategy/examples/: __init__.py  ma_cross_dsl.py
py/tests/: conftest.py  test_ir_compiler.py  test_parquet_to_csv.py  test_pybind.py
py/tests/api/: test_p3_integration.py  test_routes.py
py/tests/backtest/: test_broker.py  test_engine.py  test_events.py  test_p2_integration.py  test_performance.py
py/tests/bot/: test_bot.py
py/tests/core/: test_settings.py
py/tests/data/: test_akshare_macro_provider.py  test_akshare_provider.py  test_daily_bar_collector.py  test_financial_collector.py  test_index_constituent_collector.py  test_industry_classification_collector.py  test_minute_bar_collector.py  test_p0_integration.py  test_quality_edge_cases.py  test_validator.py
py/tests/macro/: test_macro.py
py/tests/ml/: test_ml_pipeline.py
py/tests/news/: test_news.py
py/tests/pipeline/: test_p4_integration.py
py/tests/strategy/: test_dsl_integration.py  test_optimizer.py  test_strategy.py
py/tests/system/: test_e2e.py  test_ir_pipeline.py
py/tests/unit/: test_dsl2_ir.py
(+2125 files in other folders)
