[project]
name = "quant-invest"
version = "0.1.0"
description = "A股量化投资系统 - Python策略研究层"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "QuantInvest Team" },
]

dependencies = [
    # ── 数据处理 ──
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=0.20",
    "pyarrow>=15.0",

    # ── 数据源 ──
    "akshare>=1.12",
    "tushare>=1.4",

    # ── ML/AI ──
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "torch>=2.2",
    "optuna>=3.5",

    # ── API ──
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",

    # ── 飞书 ──
    "feishu-sdk>=1.0",

    # ── 配置 & 日志 ──
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "loguru>=0.7",
    "python-dotenv>=1.0",

    # ── 调度 & 并发 ──
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    # ── 代码质量 ──
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",

    # ── 测试 ──
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.98",

    # ── Jupyter ──
    "jupyter>=1.0",
    "ipython>=8.20",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_invest"]

# ── Ruff 配置 ──
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["quant_invest"]

# ── mypy 配置 ──
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["akshare.*", "tushare.*", "torch.*", "feishu_sdk.*"]
ignore_missing_imports = true

# ── pytest 配置 ──
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "network: marks tests that require network access",
]

# ── Coverage 配置 ──
[tool.coverage.run]
source = ["quant_invest"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true